Bug 47738 - [ILK/IVB]I-G-T/gem_mmap_offset_exhaustion fail
Summary: [ILK/IVB]I-G-T/gem_mmap_offset_exhaustion fail
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 40928
  Show dependency treegraph
 
Reported: 2012-03-22 19:42 UTC by Guang Yang
Modified: 2017-10-06 14:50 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg with case (499 bytes, text/plain)
2012-03-22 19:42 UTC, Guang Yang
no flags Details

Description Guang Yang 2012-03-22 19:42:32 UTC
Created attachment 58895 [details]
dmesg with case

System Environment:
--------------------------
Platform:        ILK/IVB
Kernel: (drm-intel-fixes)5d031e5b633d910f35e6e0abce94d9d842390006
Bug detailed description:
-------------------------
   On ILK/IVB platform ,running gem_mmap_offset_exhaustion of the Intel-gpu-tools will fail.
   the error on the console is like this:
   mmap failed
   gem_mmap_offset_exhaustion: gem_mmap_offset_exhaustion.c:67: create_and_map_bo: Assertion `ptr' failed.
   Aborted (core dumped)
     Here is the GDB backtrace:
#0  0xb7fff424 in __kernel_vsyscall ()
#1  0x4a6c50ef in raise () from /lib/libc.so.6
#2  0x4a6c6a25 in abort () from /lib/libc.so.6
#3  0x4a6bdce5 in __assert_fail_base () from /lib/libc.so.6
#4  0x4a6bdd97 in __assert_fail () from /lib/libc.so.6
#5  0x08048cc7 in create_and_map_bo (fd=7) at gem_mmap_offset_exhaustion.c:67
#6  main (argc=1, argv=0xbffff3f4) at gem_mmap_offset_exhaustion.c:91
Comment 1 Chris Wilson 2012-03-23 01:55:39 UTC
I have a fix buried in http://cgit.freedesktop.org/~ickle/linux-2.6/commit/?h=vmap which I'll tidy up and submit shortly.
Comment 2 Daniel Vetter 2012-03-23 03:05:20 UTC
drm-intel-next-queued just gained a patch that should fix this:

commit a14917eeb2cc160d13f4fddefe5f7f9c80953ce1
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Feb 24 21:13:38 2012 +0000

    drm/i915: Release the mmap offset when purging a buffer

Please verify.
Comment 3 Guang Yang 2012-03-25 01:07:50 UTC
 Ok, the patch can fix this bug.
Comment 4 Guang Yang 2012-04-25 19:08:10 UTC
On ILK(DELL E6510) platform ,running only gem_mmap_offset_exhaustion of the Intel-gpu-tools will fail,it's a regression.
   the error on the console is like this:
   mmap failed
   gem_mmap_offset_exhaustion: gem_mmap_offset_exhaustion.c:67: create_and_map_bo: Assertion `ptr' failed.
   Aborted (core dumped)

   the kernel running with is:
   Kernel: (drm-intel-fixes)44afb3a04391a74309d16180d1e4f8386fdfa745

   the GDB backtrace is:
#0  0xb7fff424 in __kernel_vsyscall ()
#1  0x4a16798f in raise () from /lib/libc.so.6
#2  0x4a1692d5 in abort () from /lib/libc.so.6
#3  0x4a1606a5 in __assert_fail_base () from /lib/libc.so.6
#4  0x4a160757 in __assert_fail () from /lib/libc.so.6
#5  0x08048db5 in create_and_map_bo (fd=8) at gem_mmap_offset_exhaustion.c:67
#6  main (argc=1, argv=0xbffff2b4) at gem_mmap_offset_exhaustion.c:91
Comment 5 Chris Wilson 2012-04-26 01:52:25 UTC
It is not a regression, it never has been fixed on the -fixes branch as it is targetting -next.
Comment 6 Elizabeth 2017-10-06 14:50:42 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.